theme/standard-totara/styles_ie7.css
input, select, button {
  padding-left:3px;
  padding-right:3px;
  overflow:visible;
}

#totara_menu ul li div{
    float:left;
}

#totara_menu ul li a {
    float:left;
}

/* Login page */
#login-index .loginpanel,
#login-index .loginbox .loginform .form-label,
#login-index .loginbox .loginform .form-input {
    position:relative;
}

/* Admin block */
#left-column .block_admin_tree {
    position:relative;
}

div.totara-dialog td.select #search-tab table#dialog-search-table td.querybox input {
    margin-left: 0 !important;
}

/* Fixing the tree dialogs */
div.totara-dialog ul.treeview li {
    float: left;
    width: 80%;
}
div.totara-dialog ul.treeview li span.folder {
    float: left;
}

